[macOS]Minimized profile window opens behind the active profile when switched
Categories
(Toolkit :: Startup and Profile System, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox133 | --- | unaffected |
| firefox134 | --- | unaffected |
| firefox135 | --- | verified |
People
(Reporter: sbadau, Assigned: mossop)
References
(Blocks 2 open bugs)
Details
(Whiteboard: [fidefe-profile-management])
Attachments
(2 files)
Found in
- Nightly 135.0a1
Affected versions
- Nightly 135.0a1
Tested platforms
- Affected platforms: macOS 15, macOS 14.
Preconditions
- Set the pref "browser.profiles.enabled" to "true" in about:config.
- Create one profile (Personal)
- Open both profiles (Original and Personal) simultaneously.
Steps to reproduce
- Minimize the window for the Personal profile
- In the Profiles list of the Original profile, click on the Personal profile to switch to it.
Expected result
- The window for the Personal profile should be brought to the foreground and take focus.
Actual result
- The window for the Personal profile is brought to the background, appearing behind the Original profile window. Please see the screen recording foe more details.
Regression range
- Not a regression, this is introduced with the Profile Switching feature.
| Reporter | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 1•1 year ago
|
||
The severity field is not set for this bug.
:mossop, could you have a look please?
For more information, please visit BugBot documentation.
Mass setting S2 severity for 0.5% release bugs. Apologies for the bug spam!
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 3•1 year ago
|
||
This matches how we handle the -foreground command line argument. SetFrontProcess is deprecated but
it does still work. The existing approach appears to require a calling process to explicitely yield
focus which doesn't seem easy to do.
unlike
Comment 5•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
| Reporter | ||
Comment 6•1 year ago
|
||
Marking this as Verified Fixed using Firefox 135.0b4 and Nightly 136.0a1 on macOS 15. The initial issue is no longer reproducible, as the minimized profile window now opens in the foreground.
However, I noticed a strange flicker when the minimized window is brought to the foreground, as shown in the video. Dave, is this behavior expected?
Description
•