Bug 1933454: Use deprecated SetFrontProcess to bring an existing app to the foreground. r=spohl

This matches how we handle the -foreground command line argument. SetFrontProcess is deprecated but
it does still work. The existing approach appears to require a calling process to explicitely yield
focus which doesn't seem easy to do.

Differential Revision: https://phabricator.services.mozilla.com/D232625